--- a/src/RemindersForTopEleven/RemindersForTopEleven.csproj
+++ b/src/RemindersForTopEleven/RemindersForTopEleven.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Events.cs" />
     <Compile Include="Reader.cs" />
     <Compile Include="TelegramApi.cs" />
     <Page Include="MainWindow.xaml">
